--- a/index.html
+++ b/index.html
@@ -7,77 +7,80 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PingFang:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="css/all.css">
     <title>履歷切版設計</title>
 </head>
 <body>
-    <div class="wrap">
-        <div class="header">
-            <h1 class="font2">Joanne<br>Chen</h1>
-            <hr class="header_hr">
-            <img src="img/photo.png" alt="pic">
-            <h2 class="font1">個人資料<span>PROFILE</span></h2>
-            <hr>
-            <p class="profile1 font1">
-                陳久安 Joanne Chen<br> 
-                1997-<br> 
-                應屆畢業生／接案設計師／UI 設計實習生
-            </p>
-            <p class="profile2 font1">
-                UI 設計修行中／立志當斜槓青年<br> 
-                獨立接案，內容涵蓋：<br> 
-                品牌規劃、視覺設計、編輯設計、標準字、物件及印刷品設計等。
-            </p>
-            
-            <h2 class="font1">學歷<span>EDUCATION</span></h2>
-            <hr>
-            <p class="education1 font1">國立六角師範大學 視覺設計學系 學士學位 | 2016－2020</p>
-            <p class="education2 font1">國立六腳高級中學 美術班 | 2013－2016</p>
+    <div class="header container">
+        <h1 class="mb-6 header_line">Joanne<br>Chen</h1>
+        <img src="img/photo.png" alt="pic" class="mb-6">
+        <div class="profile">
+            <h2 class="line mb-3">個人資料<span>PROFILE</span></h2>
+            <ul class="mb-3">
+                <li class="mb-1">陳久安 Joanne Chen</li>
+                <li class="mb-1">1997-</li>
+                <li>應屆畢業生／接案設計師／UI 設計實習生</li>
+            </ul>
+            <ul class="mb-9">
+                <li class="mb-1">UI 設計修行中／立志當斜槓青年</li>
+                <li class="mb-1">獨立接案，內容涵蓋：</li>
+                <li>品牌規劃、視覺設計、編輯設計、標準字、物件及印刷品設計等。</li>
+            </ul>
         </div>
-
-        <div class="skills_bg">
-            <div class="skills">
-                <h2 class="font3">技能<span>SKILLS</span></h2>
-                <hr class="skills_hr">
-                <div class="ability font2_l">
-                    <p>Adobe Photoshop</p>
-                    <p>Adobe Illustrator</p>
-                    <p>Adobe XD</p>
-                    <p>Adobe Indesign</p>
-                    <p>C4D</p>
-                    <p>Adobe Premiere</p>
-                    <p>語言：中文、英文</p>
-                </div>
-            </div>
+        <div class="education">
+            <h2 class="line mb-3">學歷<span>EDUCATION</span></h2>
+            <ul class="mb-9">
+                <li class="mb-3">國立六角師範大學 視覺設計學系 學士學位 | 2016－2020</li>
+                <li>國立六腳高級中學 美術班 | 2013－2016</li>
+            </ul>
         </div>
+    </div>
 
-        <div class="work">
-            <h2 class="font1">工作經驗 <span>WORK EXPERIENCE</span></h2>
-            <hr>
-            <div class="description font1">
-                <p class="des_text">六角學院 視覺設計實習生 | 2019/07－2020/06</p>
-                <img src="img/Group 1.svg" alt="hexschool">
-                <p class="des_text2">在六角學院長達一年的實習中，前期藉由公司課程掌握 HTML, CSS, Adobe XD，設計給學員使用的名片設計教材，並參與六角週年活動，設計各式周邊商品及活動網路宣傳圖。後期進入 UI 設計範疇，設計六角共筆部落格 - W3HexSchool、六角發案服務網介面設計、供給學員的教 案- RWD官方網站設計，並設計各式網頁活動宣傳圖。</p>
-                <p class="des_text1">獨立接案 Hao Jun 酒標設計 | 2019</p>
-                <p class="des_text1">獨立接案 Exulans 酒標設計 | 2019</p>
-                <p class="des_text1">獨立接案 桃園平鎮市民健走活動提案 | 2019</p>
-                <p class="des_text1">Simtree 興趣咖啡 工讀生 | 2018－2019</p>
-                <img src="img/simtree.png" alt="simtree">
-                <p class="des_text2">擔任外場及吧台服務生，學習咖啡相關知識。</p>
-            </div>
+    <div class="skills_bg mb-9">
+        <div class="skills">
+            <h2 class="line_white mb-5">技能<span>SKILLS</span></h2>
+            <ul class="ability">
+                <li class="mb-2">Adobe Photoshop</li>
+                <li class="mb-2">Adobe Illustrator</li>
+                <li class="mb-2">Adobe XD</li>
+                <li class="mb-2">Adobe Indesign</li>
+                <li class="mb-2">C4D</li>
+                <li class="mb-2">Adobe Premiere</li>
+                <li>語言：中文、英文</li>
+            </ul>
         </div>
+    </div>
 
+    <div class="work container">
+        <h2 class="line mb-3">工作經驗<span>WORK EXPERIENCE</span></h2>
+        <ul class="mb-9">
+            <li class="ml-3 mb-1">六角學院 視覺設計實習生 | 2019/07－2020/06
+                <img src="img/Group 1.svg" alt="hexschool" class="mb-1 mt-2">
+                <p class="mb-3">在六角學院長達一年的實習中，前期藉由公司課程掌握 HTML, CSS, Adobe XD，設計給學員使用的名片設計教材，並參與六角週年活動，設計各式周邊商品及活動網路宣傳圖。後期進入 UI 設計範疇，設計六角共筆部落格 - W3HexSchool、六角發案服務網介面設計、供給學員的教案- RWD官方網站設計，並設計各式網頁活動宣傳圖。</p>
+            </li>
+            <li class="ml-3 mb-3">獨立接案 Hao Jun 酒標設計 | 2019</li>
+            <li class="ml-3 mb-3">獨立接案 Exulans 酒標設計 | 2019</li>
+            <li class="ml-3 mb-3">獨立接案 桃園平鎮市民健走活動提案 | 2019</li>
+            <li class="ml-3 mb-3">Simtree 興趣咖啡 工讀生 | 2018－2019
+                <img src="img/simtree.png" alt="simtree" class="mb-1 mt-2">
+                <p>擔任外場及吧台服務生，學習咖啡相關知識。</p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="footer_bg">
         <div class="footer">
-            <h2 class="font1">聯絡方式 <span>CONTACT METHOD</span></h2>
-            <hr></hr>
-            <p>Mail：xxxd@hexschool.com</p>
-            <p>Phone：0910123456</p>
-            <p>Kaohsiung, Taiwan</p>
-            <p>作品連結：https://www.behance.net/xxxdddddd</p>
-            <ul class="img">
-               <li><a href="#"><img src="img/facebook.svg" alt="fb"></a></li> 
-               <li><a href="#"><img src="img/instagram-alt.svg" alt="ig"></a></li>
-               <li><a href="#"><img src="img/line.svg" alt="line"></a></li>
+            <h2 class="line_white mb-4">聯絡方式<span>CONTACT METHOD</span></h2>
+            <ul>
+                <li class="mb-2"><a href="#">Mail：xxxd@hexschool.com</a></li>
+                <li class="mb-2"><a href="#">Phone：0910123456</a></li>
+                <li class="mb-2">Kaohsiung, Taiwan</li>
+                <li class="mb-2"><a href="#">作品連結：https://www.behance.net/xxxdddddd</a></li>
+                <ul class="img">
+                    <li class="mr-3"><a href="#"><img src="img/facebook.svg" alt="fb"></a></li> 
+                    <li class="mr-3"><a href="#"><img src="img/instagram-alt.svg" alt="ig"></a></li>
+                    <li><a href="#"><img src="img/line.svg" alt="line"></a></li>
+                </ul>
             </ul>
         </div>
     </div>
